# cherry-studio

./: .gitignore  biome.jsonc  package.json
.github/workflows/: branch-build.yml
rust-sdk/: AGENTS.md  Cargo.toml  README.md
rust-sdk/src/: lib.rs
src/main/: ipc.ts
src/main/helpers/rustSdk/: index.ts
src/main/helpers/uiControl/: application.ts  index.ts  keyboard.ts  layout.ts  mouse.ts  process.ts
src/main/services/: ScreenshotService.ts
src/main/services/__tests__/: ScreenshotService.test.ts
src/main/services/agents/services/claudecode/: index.ts  promptResolver.ts
src/main/utils/: process.ts
src/main/utils/__tests__/: process.test.ts
src/preload/: index.ts
src/renderer/src/aiCore/prepareParams/: messageConverter.ts  parameterBuilder.ts
src/renderer/src/aiCore/prepareParams/__tests__/: message-converter.test.ts
src/renderer/src/hooks/: usePromptProcessor.ts
src/renderer/src/i18n/locales/: en-us.json  zh-cn.json  zh-tw.json
src/renderer/src/pages/home/Inputbar/: Inputbar.tsx
src/renderer/src/services/: ApiService.ts
src/renderer/src/services/computerUse/: ComputerUseMessageBuilder.ts  ComputerUsePromptBuilder.ts  types.ts
src/renderer/src/services/computerUse/__tests__/: ComputerUseMessageBuilder.test.ts
src/renderer/src/store/: inputTools.ts
src/renderer/src/tools/: application.ts  index.ts  keyboard.ts  mouse.ts
src/renderer/src/types/: chat.ts
src/renderer/src/utils/: mcp-tools.ts  prompt.ts
src/renderer/src/utils/__tests__/: mcp-builtins.test.ts  prompt.test.ts
src/renderer/src/windows/mini/home/: HomeWindow.tsx
(+8 files in other folders)
